# optimized_cplusplus

./: CMakeLists.txt  LICENSE  README.md
api_design/: CMakeLists.txt
api_design/patterns/adapter/: main.cpp
api_design/qualities/base_call_derive_functions/: base_call_deriver_functions.cpp
api_design/qualities/callback_instance/: main.cpp  modulea.cpp  modulea.h  moduleb.cpp  moduleb.h
api_design/qualities/callback_static/: main.cpp  modulea.cpp  modulea.h  moduleb.cpp  moduleb.h
api_design/qualities/entry_point_shared/: main.cpp  my_shared_object.cpp  my_shared_object.h
api_design/qualities/extern_leakage/: extern_object.cpp  extern_object.h  main.cpp
api_design/qualities/shared_pointer/: main.cpp  myobject.cpp  myobject.h
data_struct_algorithm/: CMakeLists.txt
data_struct_algorithm/array_list/: array_list.cpp  array_list.h  linear_list.cpp  linear_list.h  main.cpp
data_struct_algorithm/sort/: bubble_sort.cpp  select_sort.cpp
doc/: C++内存模型和原子类型操作.md  Linux-Page-Cache.md  data_struct_algorithm.md  effective_C++.md  gtest.md  json.pu.puml  optimized_cplusplus.adoc  optimized_cplusplus.md
doc/image/: -16290324870631
functional_programming/: CMakeLists.txt
functional_programming/average_score/: average_score.cpp
functional_programming/count_line/: count_file_line.cpp
functional_programming/inc/: person.h
functional_programming/transform_filter/: transform_filter.cpp
gtest/: CMakeLists.txt  gtest_demo.cpp  gtest_event.cpp  gtest_global.cpp  gtest_print_color.cpp  gtest_sample.cpp  gtest_testcase.cpp
src/: CMakeLists.txt  main.cpp
src/basic/: benchmark_example.cpp  condition_var.cpp  const_func.cpp  function.cpp  make_a_tree.cpp  return_value_optimization.cpp  write_file.cpp
src/concurrent_programming/: future_demo.cpp  promise_future.cpp  release_consume.cpp  sequentially_consistent.cpp  shared_future_demo.cpp
src/effective_C++/: auto_ptr_guard_data.cpp  effective_basic.cpp  operate_new_failed.cpp  template_recursive.cpp  virtual_param.cpp
src/optimize_file/: cpu_cache.cpp  optimized_hotfunc.cpp  remove_ctrl.cpp
src/timer/: timer_utils.cpp  timer_utils.h
